Source/WebCore/platform/graphics/chromium/CrossProcessFontLoading.h
@@ -33,6 +33,7 @@
 
 #import <wtf/RefCounted.h>
 #import <wtf/RetainPtr.h>
+#import <wtf/text/WTFString.h>
 
 typedef struct CGFont* CGFontRef;
 typedef UInt32 ATSFontContainerRef;
@@ -73,7 +74,7 @@ namespace WebCore {
 class MemoryActivatedFont : public RefCounted<MemoryActivatedFont> {
 public:
     // Use to create a new object, see docs on constructor below.
-    static PassRefPtr<MemoryActivatedFont> create(ATSFontContainerRef srcFontContainerRef, ATSFontContainerRef container);
+    static PassRefPtr<MemoryActivatedFont> create(uint32_t fontID, NSFont*, ATSFontContainerRef);
     ~MemoryActivatedFont();
     
     // Get cached CGFontRef corresponding to the in-memory font.
@@ -87,12 +88,13 @@ private:
     // load in-process.
     // container - a font container corresponding to an identical font that
     // we loaded cross-process.
-    MemoryActivatedFont(ATSFontContainerRef srcFontContainerRef, ATSFontContainerRef container);
+    MemoryActivatedFont(uint32_t fontID, NSFont*, ATSFontContainerRef);
 
     ATSFontContainerRef m_fontContainer;
     WTF::RetainPtr<CGFontRef> m_cgFont;
     ATSFontRef m_atsFontRef;
-    ATSFontContainerRef m_srcFontContainerRef;
+    uint32_t m_fontID;
+    WTF::String m_inSandboxHashKey;
 };
 
 } // namespace WebCore
